Fixed the horizontal page width scrolling on mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,7 +2,9 @@
 * {
     margin: 0px;
     scroll-behavior: smooth;
-}
+/*     overflow-x: hidden;
+ */}
+
 
 nav {
     top: 0px;
@@ -57,7 +59,7 @@ nav,
 .contentShifter {
     z-index: 1;
     height: 50px;
-    width: 100%;
+    width: 99%;
     background-color: #55B3D0;
     padding-top: 20px;
     padding-left: 15px;
